[project]
name = "ycnodes_toolkit"
description = "ComfyUI toolkit with custom nodes for BBox canvas visualization, image brush mask drawing, and coordinate annotation for debugging and external data bridging. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.23", "Pillow>=9.0"]

[project.urls]
Repository = "https://github.com/yichengup/ComfyUI-YCNodes_Toolkit"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/yichengup/ComfyUI-YCNodes_Toolkit/wiki"
"Bug Tracker" = "https://github.com/yichengup/ComfyUI-YCNodes_Toolkit/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-YCNodes_Toolkit"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

